Update font, icons

--- a/src/components/IconsProvider.astro
+++ b/src/components/IconsProvider.astro
@@ -39,4 +39,25 @@
     <polyline points="2 15.5 12 8.5 22 15.5"></polyline>
     <line x1="12" x2="12" y1="2" y2="8.5"></line>
   </symbol>
+
+  <symbol id="email" viewBox="0 0 24 24">
+    <rect width="20" height="16" x="2" y="4" rx="2"></rect>
+    <path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path>
+  </symbol>
+
+  <symbol id="sun" viewBox="0 0 24 24">
+    <circle cx="12" cy="12" r="4"></circle>
+    <path d="M12 2v2"></path>
+    <path d="M12 20v2"></path>
+    <path d="m4.93 4.93 1.41 1.41"></path>
+    <path d="m17.66 17.66 1.41 1.41"></path>
+    <path d="M2 12h2"></path>
+    <path d="M20 12h2"></path>
+    <path d="m6.34 17.66-1.41 1.41"></path>
+    <path d="m19.07 4.93-1.41 1.41"></path>
+  </symbol>
+
+  <symbol id="moon" viewBox="0 0 24 24">
+    <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"></path>
+  </symbol>
 </svg>
