--- a/src/components/Icon.astro
+++ b/src/components/Icon.astro
@@ -10,5 +10,5 @@ const { className, icon } = Astro.props;
 ---
 
 <svg class:list={["icon", "lucide-icon", className]} aria-hidden="true">
-  <use href={`#${icon}`}></use>
+  <use href={`/icons.svg#${icon}`}></use>
 </svg>
