--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,9 +27,8 @@ const [projects, experiments] = await Promise.all([
       projects.map(({ id, data }) => (
         <Post
           title={data.title}
-          link={`/projects/${id}`}
+          link={`/projects/${id}/`}
           description={data.description}
-          publishDate={data.publishDate}
         />
       ))
     }
@@ -42,9 +41,8 @@ const [projects, experiments] = await Promise.all([
       experiments.map(({ id, data }) => (
         <Post
           title={data.title}
-          link={`/experiments/${id}`}
+          link={`/experiments/${id}/`}
           description={data.description}
-          publishDate={data.publishDate}
         />
       ))
     }
