--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,3 +12,12 @@ const { author } = websiteConfig;
   </p>
   <SocialLinks items={socialLinks} />
 </footer>
+
+<style>
+  .footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: var(--spacing-9);
+  }
+</style>
