--- a/src/components/ThemeToggler.astro
+++ b/src/components/ThemeToggler.astro
@@ -3,8 +3,8 @@ import Icon from "./Icon.astro";
 ---
 
 <button class="theme-toggle" type="button">
-  <Icon icon="sun" className="theme-toggle-icon light" />
-  <Icon icon="moon" className="theme-toggle-icon dark" />
+  <Icon icon="sun" class="theme-toggle-icon light" />
+  <Icon icon="moon" class="theme-toggle-icon dark" />
   <span class="visually-hidden">Toggle theme</span>
 </button>
 
