Add Open Graph post image generation

--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -29,7 +29,7 @@ const { title, link, description, tags } = Astro.props;
   .post-link {
     text-decoration-line: underline;
 
-    &:hover {
+    &:is(:hover, :focus-visible) {
       text-decoration-line: none;
     }
   }
