--- a/src/components/BaseMeta.astro
+++ b/src/components/BaseMeta.astro
@@ -5,22 +5,18 @@ interface Props {
   title: string;
   description?: string;
   ogImage?: string;
-  publishDate?: string;
-  updateDate?: string;
 }
 
 const { author, titleSuffix, defaultDescription } = websiteConfig;
-const {
-  title,
-  description = defaultDescription,
-  publishDate,
-  updateDate,
-  ogImage,
-} = Astro.props;
+const { title, description = defaultDescription, ogImage } = Astro.props;
 
 const pageUrl = new URL(Astro.url.pathname, Astro.site);
-const imageUrl = new URL(ogImage || "/social-image.webp", Astro.url);
-const ogType = publishDate ? "article" : "website";
+const ogImageUrl = new URL(ogImage || "/og-image.png", Astro.url);
+const ogType = ["/projects/", "/experiments/"].find(
+  (path) => Astro.url.pathname.startsWith(path) && Astro.url.pathname !== path,
+)
+  ? "article"
+  : "website";
 ---
 
 <meta charset="utf-8" />
@@ -30,24 +26,13 @@ const ogType = publishDate ? "article" : "website";
 
 <meta property="og:title" content={title} />
 <meta property="og:type" content={ogType} />
-<meta property="og:image" content={imageUrl} />
+<meta property="og:image" content={ogImageUrl} />
 <meta property="og:url" content={pageUrl} />
-{
-  publishDate && (
-    <>
-      <meta property="article:published_time" content={publishDate} />
-      <meta property="article:author" content={author} />
-      {updateDate && (
-        <meta property="article:modified_time" content={updateDate} />
-      )}
-    </>
-  )
-}
 
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content={title} />
 <meta name="twitter:url" content={pageUrl} />
-<meta name="twitter:image" content={imageUrl} />
+<meta name="twitter:image" content={ogImageUrl} />
 
 <meta name="author" content={author} />
 <meta name="generator" content={Astro.generator} />
