--- a/src/pages/experiments/[slug]/index.astro
+++ b/src/pages/experiments/[slug]/index.astro
@@ -1,10 +1,10 @@
 ---
 import type { InferGetStaticPropsType } from "astro";
 import { getCollection, render } from "astro:content";
-import BaseLayout from "@/layouts/BaseLayout.astro";
+import DemoLayout from "@/layouts/DemoLayout.astro";
 
 export const getStaticPaths = async () => {
-  const entries = await getCollection("projects");
+  const entries = await getCollection("experiments");
 
   return entries.map((entry) => ({
     params: { slug: entry.id },
@@ -15,11 +15,11 @@ export const getStaticPaths = async () => {
 type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 
 const { entry } = Astro.props;
-const { title } = entry.data;
+const { title, description, ogImage } = entry.data;
 const { Content } = await render(entry);
+const ogImagePath = ogImage ? ogImage : `${Astro.url.pathname}og-image.png`;
 ---
 
-<BaseLayout title={title}>
-  <h1>{title}</h1>
+<DemoLayout title={title} description={description} ogImage={ogImagePath}>
   <Content />
-</BaseLayout>
+</DemoLayout>
