--- a/src/pages/projects/[slug]/index.astro
+++ b/src/pages/projects/[slug]/index.astro
@@ -1,10 +1,10 @@
 ---
 import type { InferGetStaticPropsType } from "astro";
 import { getCollection, render } from "astro:content";
-import DemoLayout from "@/layouts/DemoLayout.astro";
+import BaseLayout from "@/layouts/BaseLayout.astro";
 
 export const getStaticPaths = async () => {
-  const entries = await getCollection("experiments");
+  const entries = await getCollection("projects");
 
   return entries.map((entry) => ({
     params: { slug: entry.id },
@@ -15,10 +15,12 @@ export const getStaticPaths = async () => {
 type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 
 const { entry } = Astro.props;
-const { title } = entry.data;
+const { title, description, ogImage } = entry.data;
 const { Content } = await render(entry);
+const ogImagePath = ogImage ? ogImage : `${Astro.url.pathname}og-image.png`;
 ---
 
-<DemoLayout title={title}>
+<BaseLayout title={title} description={description} ogImage={ogImagePath}>
+  <h1>{title}</h1>
   <Content />
-</DemoLayout>
+</BaseLayout>
