--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -120,11 +120,12 @@ h3 {
   white-space: nowrap;
 }
 
-.container {
-  width: 50rem;
-  max-width: 100%;
-  margin: 0 auto;
-  padding: var(--spacing-4);
+.pixelated {
+  image-rendering: pixelated;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .divider {
