--- a/src/components/Tags.astro
+++ b/src/components/Tags.astro
@@ -38,7 +38,7 @@ const { tags, class: className, ...rest } = Astro.props;
     font-size: var(--font-size-sm);
     font-weight: 600;
     padding: 0 var(--spacing-1);
-    background-color: #aeaeae;
+    background-color: light-dark(#aeaeae, #42454a);
     color: #fff;
     border-radius: 0.4em;
   }
