--- a/src/components/ThemeToggler.astro
+++ b/src/components/ThemeToggler.astro
@@ -5,7 +5,7 @@ import Icon from "./Icon.astro";
 <button class="theme-toggle" type="button">
   <Icon icon="sun" class="theme-toggle-icon light" />
   <Icon icon="moon" class="theme-toggle-icon dark" />
-  <span class="visually-hidden">Toggle theme</span>
+  <span class="sr-only">Toggle theme</span>
 </button>
 
 <style is:global>
