--- a/src/pages/projects/[slug]/index.astro
+++ b/src/pages/projects/[slug]/index.astro
@@ -3,6 +3,7 @@ import type { InferGetStaticPropsType } from "astro";
 import { getCollection, render } from "astro:content";
 import BaseLayout from "@/layouts/BaseLayout.astro";
 import Tags from "@/components/Tags.astro";
+import Info from "@/components/Info.astro";
 
 export const getStaticPaths = async () => {
   const entries = await getCollection("projects");
@@ -16,19 +17,27 @@ export const getStaticPaths = async () => {
 type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 
 const { entry } = Astro.props;
-const { title, description, ogImage, tags } = entry.data;
+const { title, description, ogImage, tags, repoLink } = entry.data;
 const { Content } = await render(entry);
 const ogImagePath = ogImage ? ogImage : `${Astro.url.pathname}og-image.png`;
 ---
 
 <BaseLayout title={title} description={description} ogImage={ogImagePath}>
   <h1>{title}</h1>
-  {tags && <Tags tags={tags} class="post-detail-tags" />}
+  <div class="post-info">
+    {
+      !!tags.length && (
+        <Info icon="tags">
+          <Tags tags={tags} />
+        </Info>
+      )
+    }
+  </div>
   <Content />
 </BaseLayout>
 
 <style>
-  .post-detail-tags {
+  .post-info {
     margin-bottom: var(--spacing-6);
   }
 </style>
