--- a/src/components/Meta.astro
+++ b/src/components/Meta.astro
@@ -2,13 +2,13 @@
 import { websiteConfig } from "@/website.config";
 
 interface Props {
-  title: string;
+  title?: string;
   description?: string;
   ogImage?: string;
 }
 
-const { author, titleSuffix, defaultDescription } = websiteConfig;
-const { title, description = defaultDescription, ogImage } = Astro.props;
+const { author, titleAppendix, defaultTitle, defaultDescription } = websiteConfig;
+const { title = defaultTitle, description = defaultDescription, ogImage } = Astro.props;
 
 const pageUrl = new URL(Astro.url.pathname, Astro.site);
 const ogImageUrl = new URL(ogImage || "/og-image.png", Astro.url);
@@ -23,7 +23,7 @@ const ogType = ["/projects/", "/experiments/"].find(
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <meta name="description" content={description} />
-<title>{title}{titleSuffix}</title>
+<title>{title}{titleAppendix}</title>
 
 <meta property="og:title" content={title} />
 <meta property="og:type" content={ogType} />
