--- a/src/layouts/DemoLayout.astro
+++ b/src/layouts/DemoLayout.astro
@@ -1,8 +1,7 @@
 ---
 import "@/styles/demo.css";
 
-import BaseMeta from "@/components/BaseMeta.astro";
-import ThemeSync from "@/components/ThemeSync.astro";
+import Meta from "@/components/Meta.astro";
 
 interface Props {
   title: string;
@@ -13,10 +12,9 @@ interface Props {
 const { title, description, ogImage } = Astro.props;
 ---
 
-<html lang="en" data-theme="light">
+<html lang="en">
   <head>
-    <BaseMeta title={title} description={description} ogImage={ogImage} />
-    <ThemeSync />
+    <Meta title={title} description={description} ogImage={ogImage} />
   </head>
   <body>
     <slot />
