--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -33,6 +33,37 @@
   --font-size-2xl: calc(var(--font-size-unit) * 12);
   --font-size-3xl: calc(var(--font-size-unit) * 14);
   --font-size-4xl: calc(var(--font-size-unit) * 16);
+
+  /* Tailwind colors https://tailwindcss.com/docs/colors */
+  --color-slate-50: oklch(98.4% 0.003 247.858);
+  --color-slate-100: oklch(96.8% 0.007 247.896);
+  --color-slate-200: oklch(92.9% 0.013 255.508);
+  --color-slate-300: oklch(86.9% 0.022 252.894);
+  --color-slate-400: oklch(70.4% 0.04 256.788);
+  --color-slate-500: oklch(55.4% 0.046 257.417);
+  --color-slate-600: oklch(44.6% 0.043 257.281);
+  --color-slate-700: oklch(37.2% 0.044 257.287);
+  --color-slate-800: oklch(27.9% 0.041 260.031);
+  --color-slate-900: oklch(20.8% 0.042 265.755);
+  --color-slate-950: oklch(12.9% 0.042 264.695);
+  --color-gray-50: oklch(98.5% 0.002 247.839);
+  --color-gray-100: oklch(96.7% 0.003 264.542);
+  --color-gray-200: oklch(92.8% 0.006 264.531);
+  --color-gray-300: oklch(87.2% 0.01 258.338);
+  --color-gray-400: oklch(70.7% 0.022 261.325);
+  --color-gray-500: oklch(55.1% 0.027 264.364);
+  --color-gray-600: oklch(44.6% 0.03 256.802);
+  --color-gray-700: oklch(37.3% 0.034 259.733);
+  --color-gray-800: oklch(27.8% 0.033 256.848);
+  --color-gray-900: oklch(21% 0.034 264.665);
+  --color-gray-950: oklch(13% 0.028 261.692);
+  --color-black: #000;
+  --color-white: #fff;
+
+  --color-text-primary: light-dark(var(--color-gray-950), var(--color-gray-300));
+  --color-bg-primary: light-dark(var(--color-gray-50), var(--color-gray-800));
+  --color-outline: light-dark(var(--color-slate-700), var(--color-slate-300));
+  --transition-theme: background-color 0.5s, color 0.5s, border-color 0.5s;
 }
 
 :root[data-theme="light"] {
@@ -45,19 +76,17 @@
 
 body {
   font-family: InterVariable, system-ui, sans-serif;
-  font-optical-sizing: auto;
   font-size: var(--font-size-lg);
   text-rendering: optimizeLegibility;
-  background-color: light-dark(#fff, #21252b);
-  color: light-dark(#1a1a1a, #fff);
-  transition: background-color 0.5s;
   min-height: 100vh;
+  background-color: var(--color-bg-primary);
+  color: var(--color-text-primary);
+  transition: var(--transition-theme);
 }
 
-a,
-button {
-  cursor: pointer;
+:focus-visible {
   outline-offset: var(--spacing-1);
+  outline-color: var(--color-outline);
 }
 
 a {
@@ -90,6 +119,14 @@ h3 {
   font-size: var(--font-size-xl);
   font-weight: 600;
   margin-bottom: var(--spacing-2);
+}
+
+p {
+  margin: var(--spacing-3) 0;
+}
+
+img {
+  height: auto;
 }
 
 .sr-only {
