--- a/src/styles/demo.css
+++ b/src/styles/demo.css
@@ -10,11 +10,29 @@
     padding: 0;
   }
 
-  .info {
-    font-size: 1.5rem;
-    font-weight: 700;
-    color: #333;
+  .sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
   }
 
-  /* back button, codepen link button, ... */
+  .unsupported {
+    display: none;
+    position: fixed;
+    bottom: 1rem;
+    left: 1rem;
+    padding: 1rem;
+    color: #000;
+    background-color: #fff;
+    border: 0.25rem solid hsl(0, 100%, 60%);
+    font-size: 1.25rem;
+    font-family: system-ui, sans-serif;
+    z-index: 999;
+  }
 }
